# BenchRNR

./: README.md  quick_start.md  run_all_trajs.sh
clustering_and_tracking/: CMakeLists.txt  package.xml
clustering_and_tracking/data/auto_run/: traj_start_info.txt
clustering_and_tracking/data/detect/: detect_1m.txt  detect_1m_128.txt  detect_1m_32.txt  detect_1m_64.txt  detect_1n.txt  detect_2m.txt  detect_2m_32.txt  detect_2m_64.txt  detect_2n.txt  detect_3m.txt  detect_3m_32.txt  detect_3m_64.txt  detect_3n.txt  detect_4m.txt  detect_4m_32.txt  detect_4m_64.txt  detect_4n.txt  detect_5m.txt  detect_5m_32.txt  detect_5m_64.txt  detect_5n.txt  detect_6m.txt  detect_6m_32.txt  detect_6m_64.txt  detect_6n.txt  detect_7m.txt  detect_7m_32.txt  detect_7m_64.txt  detect_7n.txt  detect_8m.txt  detect_8m_32.txt  detect_8m_64.txt
clustering_and_tracking/data/detect_convex/: detect_1m.txt  detect_1m_128.txt  detect_1m_32.txt  detect_1m_64.txt  detect_1n.txt  detect_2m.txt  detect_2m_32.txt  detect_2m_64.txt  detect_2n.txt  detect_3m.txt  detect_3m_32.txt  detect_3m_64.txt  detect_3n.txt  detect_4m.txt  detect_4m_32.txt  detect_4m_64.txt  detect_4n.txt  detect_5m.txt  detect_5m_32.txt  detect_5m_64.txt  detect_5n.txt  detect_6m.txt  detect_6m_32.txt  detect_6m_64.txt  detect_6n.txt  detect_7m.txt  detect_7m_32.txt  detect_7m_64.txt  detect_7n.txt  detect_8m.txt  detect_8m_32.txt  detect_8m_64.txt
clustering_and_tracking/data/gt/: gt_gps_1m.txt  gt_gps_1m_128.txt  gt_gps_1m_32.txt  gt_gps_1n.txt  gt_gps_2m.txt  gt_gps_2m_32.txt  gt_gps_2m_64.txt  gt_gps_2n.txt  gt_gps_3.txt  gt_gps_3m.txt  gt_gps_3m_32.txt  gt_gps_3m_64.txt  gt_gps_3n.txt  gt_gps_4.txt  gt_gps_4m.txt  gt_gps_4m_64.txt  gt_gps_5.txt  gt_gps_5m.txt  gt_gps_5m_32.txt  gt_gps_5m_64.txt  gt_gps_5n.txt  gt_gps_6.txt  gt_gps_6m.txt  gt_gps_6m_64.txt  gt_gps_6n.txt  gt_gps_7.txt  gt_gps_7m.txt  gt_gps_7m_32.txt  gt_gps_7m_64.txt  gt_gps_7n.txt  gt_gps_8.txt  gt_gps_8m.txt  gt_gps_8m_32.txt  gt_gps_8m_64.txt  gt_gps_8n.txt
clustering_and_tracking/data/regist/: regist_1m.txt  regist_1m_128.txt  regist_1m_32.txt  regist_1m_64.txt  regist_1n.txt  regist_2m.txt  regist_2m_32.txt  regist_2m_64.txt  regist_2n.txt  regist_3m.txt  regist_3m_32.txt  regist_3m_64.txt  regist_3n.txt  regist_4m.txt  regist_4m_32.txt  regist_4m_64.txt  regist_4n.txt  regist_5m.txt  regist_5m_32.txt  regist_5m_64.txt  regist_5n.txt  regist_6m.txt  regist_6m_32.txt  regist_6m_64.txt  regist_6n.txt  regist_7m.txt  regist_7m_32.txt  regist_7m_64.txt  regist_7n.txt  regist_8m.txt  regist_8m_32.txt  regist_8m_64.txt
clustering_and_tracking/data/scripts/: combine_txt.py  test_exp.py  test_exp_table.py  test_exp_table_with_angle.py
clustering_and_tracking/data/scripts/combined_txt/: DL_m.txt  DL_m_64.txt  DL_n.txt  detect_convex_m.txt  detect_convex_m_32.txt  detect_convex_m_64.txt  detect_convex_n.txt  detect_m.txt  detect_m_32.txt  detect_m_64.txt  detect_n.txt  regist_m.txt  regist_m_32.txt  regist_m_64.txt  regist_n.txt
clustering_and_tracking/include/: FEC_clustering.h  Heading.h  Hungarian.h  ceres_icp.h  clustering.hpp  convex_optimize_fitting.h  myhash.hpp  myoptimizer.hpp  tracker.hpp  utilis.h
clustering_and_tracking/launch/: localization.launch
clustering_and_tracking/rviz/: livox.rviz
clustering_and_tracking/src/: Hungarian.cpp  ceres_icp.cpp  clustering.cpp  convex_optimize_fitting.cpp  main.cpp  myhash.cpp  tracker.cpp  utilis.cpp
foreground_segmentation/: CMakeLists.txt  package.xml
foreground_segmentation/config/: e4_avia_1.yaml  e4_avia_2.yaml  e4_rep.yaml
foreground_segmentation/data/: background_depth_1_e4.txt  background_depth_2_e4.txt  background_rep.pcd  ring_128.txt  ring_32.txt  ring_64.txt
foreground_segmentation/src/: ikd_Tree.cpp  main.cpp
